<resources>
    <string name="title_wedges">Wedges</string>
    <string name="title_updates">Updates</string>
    <string name="title_social">Social</string>
    <string name="title_about">About Us</string>
    <string name="device_controls">Device controls</string>
    <string name="colors_category">Color settings</string>
    <string name="styles_category">Styles</string>
    <string name="corners_category">Corners</string>
    <string name="power_category">Power menu</string>
    <string name="power_ls_category">Lockscreen power menu</string>
    <string name="qs_colors_category">Colors and more</string>
    <string name="notifications_category">Notifications</string>
    <string name="about_potato">Potato Open Sauce Project is a butter smooth Android aftermarket firmware. We handpicked the best features around and are adding our own sauce to it. Get ready to taste the unique features it brings with itself.</string>
    <string name="fotato">Kshitij Gupta (AgentFabulous)</string>
    <string name="fotato_summary">Founder and Lead developer</string>
    <string name="cofotato">Nico Franke (ZerNico)</string>
    <string name="cofotato_summary">Co-founder and developer/contributor</string>
    <string name="designers">Designers</string>
    <string name="designer_summary">Graphic designer</string>
    <string name="designer0">Karol Szcześniak (McAwesomePL)</string>
    <string name="designer1">Joshua Baldassarre (JoshuaBaldassarre)</string>
    <string name="developers">Core Team</string>
    <string name="developer_summary">Developer</string>
    <string name="developer0">Adesh Ikhar (Adesh15)</string>
    <string name="developer1">Akhil Narang (akhilnarang)</string>
    <string name="developer2">Jagrav Naik (JagravNaik)</string>
    <string name="developer3">Shreyansh Lodha (shreyanshLodha)</string>
    <string name="developer4">Till Kottmann (deletescape)</string>
    <string name="googleplus">Google Plus</string>
    <string name="twitter">Twitter</string>
    <string name="telegram">Telegram</string>
    <string name="github">GitHub</string>
    <string name="wedges_summary">Would you prefer fries instead?</string>
    <string name="navigation_main">Navigation</string>
    <string name="navigation_main_summary">Hardware and software keys</string>
    <string name="software_keys">Software Keys</string>
    <string name="software_keys_summary">Customise the navigation bar</string>
    <string name="hardware_keys">Hardware Keys</string>
    <string name="hardware_keys_summary">Customise physical buttons</string>
    <string name="themes_main">Themes</string>
    <string name="themes_main_summary">Color up the menus!</string>
    <string name="misc_main">Miscellaneous</string>
    <string name="misc_main_summary">Miscellaneous settings</string>
    <string name="gestures_main">Gestures</string>
    <string name="gestures_main_summary">Touch gestures</string>
    <string name="oneplus_gestures">OnePlus Gestures</string>
    <string name="oneplus_gestures_summary">Gestures specific to OnePlus devices</string>
    <string name="notification_main">Notification</string>
    <string name="notification_main_summary">Notification experience settings</string>
    <string name="heads_up_warning_text">Heads up notifications are meant to be used for multitasking while using full screen apps and/or playing games. Just know that while you use heads up notifications, you will not be able to use the ticker feature.</string>
    <string name="ticker_warning_text">The ticker feature is meant to be used as a mulitasking tool and brings a bit of splash of the old times. Just know that while you use the ticker feature, you will not be able to use heads up notifications.</string>
    <string name="carrier_label_warning_text">Be advised that the custom carrier label is not available in the extended statusbar area, also known as the quick settings area. Also using emojis as your carrier label might cause some visibility issues on lighter backgrounds.</string>
    <string name="themes_warning_text">In rare cases, you may have to restart SystemUI for the theme to apply properly (especially on notifications). You can do so by either restarting your device or only restarting SystemUI from the Advanced Reboot menu.</string>
    <string name="qs_main">Quick settings</string>
    <string name="qs_main_summary">QS-Panel settings</string>
    <string name="theme_color">Accent colors</string>
    <string name="theme_base">Base colors</string>
    <string name="corner_radius">Rounded corner radius</string>
    <string name="content_padding">Corner content padding</string>
    <string name="corner_fwvals">Use framework values</string>
    <string name="corner_fwvals_summary">Useful if the device actually has rounded corners</string>
    <string name="qs_bg_wall_title">Use Wallpaper colors</string>
    <string name="qs_bg_wall_summary">Set QS background color from Wallpaper</string>
    <string name="qs_bg_use_fw">Use default colors</string>
    <string name="qs_bg_use_fw_summary">Disable custom quick settings styles for external theme engines</string>
    <string name="clock_main">Clock settings</string>
    <string name="clock_main_summary">Statusbar clock customisation</string>
    <string name="carrier_main">Carrier label settings</string>
    <string name="carrier_main_summary">Set carrier label options</string>
    <string name="statusbar_main">Statusbar settings</string>
    <string name="statusbar_main_summary">Customise statusbar elements</string>
    <string name="battery_main">Battery settings</string>
    <string name="battery_main_summary">Battery icon options</string>
    <string name="settings_icon_tint_title">Tint settings icons</string>
    <string name="settings_icon_tint_summary">Apply accent colors to settings icons</string>
    <string name="activity_indicators">Activity Indicators</string>
    <string name="activity_indicators_summary">Show network activity indicators</string>
    <string name="system_theme_style_title">System style</string>
    <string name="system_theme_style_auto">Wallpaper based</string>
    <string name="system_theme_style_light">Lightato</string>
    <string name="system_theme_style_dark">Darktato</string>
    <string name="system_theme_style_black">BSOS</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="navbar_interface_title">Interface</string>
    <string name="navbar_size">Bar size</string>
    <string name="navbar_mode">Navigation mode</string>
    <string name="navbar_mode_summary">Select which navigation mode to use on your device</string>
    <string name="navbar_visibility">Allow navigation bar</string>
    <string name="navigationbar_settings_title">Navigation bar</string>
    <string name="navigationbar_settings_summary">Customize navigation style and behavior</string>
    <string name="navbar_general_title">Advanced</string>
    <string name="navigation_bar_left_title">Left-handed mode</string>
    <string name="navigation_bar_left_summary">Place the navigation bar on the left side of the screen in landscape mode</string>
    <string name="smartbar_interface">SmartBar</string>
    <string name="icon_pack_picker_dialog_title">Icon packs</string>
    <string name="image_exceeds_max_allowed_size">Image must not exceed 512x512</string>
    <string name="invalid_icon_from_uri">Unable to load image from content provider</string>
    <string name="picker_activities">Activities</string>
    <string name="select_custom_app_title">Select custom app</string>
    <string name="select_custom_activity_title">Select custom activity</string>
    <string name="profile_applist_title">Applications</string>
    <string name="default_string">Stock</string>
    <string name="default_settings">Stock settings</string>
    <string name="default_settings_summary">Stock AOSP navigation bar</string>
    <string name="heads_up_title">Allow Heads up</string>
    <string name="heads_up_summary_enabled">Heads-up notifications are enabled</string>
    <string name="heads_up_summary_disabled">Heads-up notifications are disabled</string>
    <string name="heads_up_blacklist_add_package_title">Add app</string>
    <string name="heads_up_blacklist_add_package_summary">Disable heads-up notifications in these applications</string>
    <string name="heads_up_blacklist_title">Blacklist</string>
    <string name="heads_up_blacklist_choose_app">Select app</string>
    <string name="heads_up_blacklist_dialog_delete_title">Delete</string>
    <string name="heads_up_blacklist_dialog_delete_message">Remove selected item?</string>
    <string name="choose_action_title">Choose action</string>
    <string name="action_entry_default_action">Default settings</string>
    <string name="action_entry_select_app">Select application</string>
    <string name="action_entry_custom_action">Select custom action</string>
    <string name="action_value_default_action" translatable="false">default</string>
    <string name="action_value_select_app" translatable="false">app</string>
    <string name="action_value_custom_action" translatable="false">custom</string>
    <string name="action_value_back" translatable="false">task_back</string>
    <string name="action_value_home" translatable="false">task_home</string>
    <string name="action_value_search_assist" translatable="false">task_assist</string>
    <string name="action_value_recent_apps" translatable="false">task_recents</string>
    <string name="action_value_voice_search" translatable="false">task_voice_search</string>
    <string name="action_value_menu" translatable="false">task_menu</string>
    <string name="fling_settings">Fling settings</string>
    <string name="fling_settings_summary">A very unique and fully-customizable gesture-based navigation bar</string>
    <string name="fling_interface">Fling</string>
    <string name="fling_enable_title">Enable Fling</string>
    <string name="fling_back_home_policy">Back and Home are required to be set at all times. To change a Back or Home assignment, set the desired assignment first.\n\nAlso, setting a double tap action will delay single tap a bit.</string>
    <string name="fling_split_bar_policy">When only a right or left action is assigned, the action applies to the full bar.</string>
    <string name="fling_def_summary">No action set</string>
    <string name="fling_swipe_actions">Swipe gestures</string>
    <string name="fling_tap_actions">Tap gestures</string>
    <string name="fling_short_swipe_right">Right short swipe</string>
    <string name="fling_short_swipe_left">Left short swipe</string>
    <string name="fling_long_swipe_right">Right long swipe</string>
    <string name="fling_long_swipe_left">Left long swipe</string>
    <string name="fling_right_up_swipe">Right side swipe up</string>
    <string name="fling_left_up_swipe">Left side swipe up</string>
    <string name="fling_single_tap">Single tap right</string>
    <string name="fling_double_tap">Double tap right</string>
    <string name="fling_long_press">Long press right</string>
    <string name="fling_single_left_tap">Single tap left</string>
    <string name="brightness_icon_title">Brightness slider icon</string>
    <string name="brightness_icon_summary">Show a brightness icon to the left of the brightness slider to toggle auto-brightness</string>
    <string name="qs_panel_alpha_title">Transparency</string>
    <string name="qs_panel_color_title">Color</string>
    <string name="edge_gestures_title">Edge gestures</string>
    <string name="edge_gestures_summary">Swipe from the edges of your screen to navigate</string>
</resources>