<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/about_settings">

    <PreferenceScreen
        android:layout="@layout/potato_banner" />

    <Preference
        android:summary="@string/about_potato" />

    <Preference
        android:title="@string/fotato"
        android:summary="@string/fotato_summary"
        android:icon="@drawable/ic_star">
        <intent
        android:action="android.intent.action.VIEW"
        android:data="https://github.com/AgentFabulous"/>
    </Preference>

    <Preference
        android:title="@string/cofotato"
        android:summary="@string/cofotato_summary"
        android:icon="@drawable/ic_star">
        <intent
        android:action="android.intent.action.VIEW"
        android:data="https://github.com/ZerNico"/>
    </Preference>

    <PreferenceCategory
        android:title="@string/developers">

        <Preference
            android:title="@string/developer0"
            android:summary="@string/developer_summary"
            android:icon="@drawable/ic_code">
            <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/Adesh15"/>
        </Preference>

        <Preference
            android:title="@string/developer1"
            android:summary="@string/developer_summary"
            android:icon="@drawable/ic_code">
            <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/akhilnarang"/>
        </Preference>

        <Preference
            android:title="@string/developer2"
            android:summary="@string/developer_summary"
            android:icon="@drawable/ic_code">
            <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/JagravNaik"/>
        </Preference>

        <Preference
            android:title="@string/developer3"
            android:summary="@string/developer_summary"
            android:icon="@drawable/ic_code">
            <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/ShreyanshLodha"/>
        </Preference>

        <Preference
            android:title="@string/developer4"
            android:summary="@string/developer_summary"
            android:icon="@drawable/ic_code">
            <intent
            android:action="android.intent.action.VIEW"
            android:data="https://github.com/deletescape"/>
        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/designers">

        <Preference
            android:title="@string/designer0"
            android:summary="@string/designer_summary"
            android:icon="@drawable/ic_design">
            <intent
            android:action="android.intent.action.VIEW"
            android:data="https://www.youtube.com/watch?v=dQw4w9WgXcQ"/>
        </Preference>

        <Preference
            android:title="@string/designer1"
            android:summary="@string/designer_summary"
            android:icon="@drawable/ic_design">
            <intent
            android:action="android.intent.action.VIEW"
            android:data="https://joshuabaldassarre.github.io"/>
        </Preference>

        <!-- Extra preference. For some reason, bottom navigation view
             does not hide on scroll.
             TODO: Figure out why and get rid of this -->
        <Preference
            android:title=""
            android:summary="" />
    </PreferenceCategory>
</PreferenceScreen>
